--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=gerenciamento-curso
+
+# Configuracoes do Banco de Dados
+spring.datasource.url=jdbc:mysql://localhost:3306/curso_db
+spring.datasource.username=root
+spring.datasource.password=${PASSWORD_DB}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Show SQL
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.open-in-view=false
